# projeto-mestrado

./: .gitignore  README.md  akhq.yml  config-monitor.json  docker-compose.yml  requirements.txt
.github/workflows/: go-consumer.yml  go.yml
consumer/: config.json  go.mod  go.sum  run_consumer.sh
consumer/html/: home.js  index.css  index.html
docker-go/: go.mod  go.sum  main.go  sample-container-config.json
docker-go/dockertest/: dockertest.go
docker-go/kafkatest/: cluster.go  kafka.go
file-observer-producer/file-observer/: README.rst  pyproject.toml
file-observer-producer/file-observer/file_observer/api/: main.py
file-observer-producer/file-observer/file_observer/messager/: broker.py  kafka_broker.py  messager.py
file-observer-producer/file-observer/file_observer/watcher/: file_watcher.py
file-observer-producer/file-observer/tests/: test_file_observer.py
go-test/: README.md  config-monitor.json  go.mod  go.sum  sample.go  sample.json  test.go  topics.json
go-test/container-test/: containertest.go
go-test/kafkatest/: kafkatest.go
go-test/model/: model.go
go-test/stage/: stage.go
go-test/test_files/: ola.txt  ola2.txt  ola3.txt  test-file-1.txt  test_file_1.txt
go-test/tests/: complemento_tj.json  odrj_integration_test.go  test2.txt
go-test/topic/: topics.go
k6-tests/: .gitignore  README.md  test-order-msg.js  test_script.js
lua-kafka/: kafka.lua
monitor/: Dockerfile  config.json  go.mod  go.sum  run_monitor.sh  test.txt
monitor/pkg/: consumer.go  coordinator.go  producer.go  resource.go  resource_test.go  resource_watcher.go
(+18 files in other folders)
